Upgraded to use 1.0.5-RC-1 of the cf gradle plugin

--- a/src/main/resources/templates/layout/sitelayout.html
+++ b/src/main/resources/templates/layout/sitelayout.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="#{app.name}">Playful Splash Blog</title>
-    <!--<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.css}"/>-->
-    <!--<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.css}"/>-->
+    <title th:text="#{app.name}">CF Show Env</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/css/bootstrap_custom.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap_theme.css}"/>
+    <!--<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap-theme.css}"/>-->
 
-    <script th:src="@{/webjars/jquery/2.2.3/jquery.js}"></script>
-    <script th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.js}"></script>
+    <script th:src="@{/webjars/jquery/3.1.1/jquery.js}"></script>
+    <script th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.js}"></script>
 
 </head>
 <body>
