--- a/src/main/resources/templates/layout/sitelayout.html
+++ b/src/main/resources/templates/layout/sitelayout.html
@@ -20,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" th:href="@{/blogs/list}">CF environment</a>
+            <a class="navbar-brand" th:href="@{/}">CF environment</a>
         </div>
     </div>
 </div>
